# bank-reconciliation-agent

./: .env.example  .gitignore  ADR.md  AGENTS.md  CLAUDE.md  README.md  architecture-lite.md  optimize_prompt.md  overall-architecture.md  overall-frontend-design-style.md  prd-lite.md  pyproject.toml  requirements-analysis.md  system-prd.md
data/: memory.sqlite  rag_eval_set.json
decisions/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005-llm-provider-and-test-contract.md  ADR-006-plain-python-orchestration-defer-langgraph.md  ADR-007-three-level-fallback-strategy.md  ADR-008-structlog-and-prompt-versioning.md  ADR-009-enhanced-rag-lightweight-default-over-bge.md  ADR-010-enhanced-rag-pipeline-layering-and-toggles.md  ADR-011-query-rewrite-llm-integration-and-fallback.md  ADR-012-rag-scenario-collection-bank-enterprise-only.md  ADR-013-hybrid-scores-logging-and-best-score-semantics.md  ADR-014-task-ai-stats-replace-semantics.md  ADR-015-scenario-parameterized-engine-minimal.md  ADR-016-clearing-branch-set-single-side-and-cutoff.md  ADR-017-cutoff-cross-day-t1-active-tracing.md  ADR-018-clearing-rag-scenario-knowledge-partition.md  ADR-019-clearing-mock-and-scenario-keyed-columns.md  ADR-020-workflow-branch-routing-generalization-zero-regression.md  ADR-021-hook-chain-plain-python-pipeline.md  ADR-022-hard-constraints-c1-c6-layering.md  ADR-023-transaction-side-effect-separation.md  ADR-024-decisionhook-vs-fallback-boundary.md  ADR-025-defer-langgraph-checkpoint-necessity-review.md  ADR-026-memory-engine-dedicated-sqlite-store.md  ADR-027-memory-manager-context-and-structured-recall.md  ADR-028-summary-compression-quality-gate.md  ADR-029-circuit-breaker-rag-only.md  ADR-030-langgraph-checkpoint-subgraph-toggle-review.md  ADR-031-checkpoint-state-persistence-and-idempotency.md  ADR-032-agent-parallel-defer-serial-by-latency.md  ADR-033-agent-decision-regression-statistical.md  ADR-034-rag-eval-set-and-offline-script.md  ADR-035-memory-rollback-on-human-override.md  ADR-036-sse-live-streaming-endpoint-dual-path.md  ADR-037-sse-event-contract-versioned-schema.md  ADR-038-rag-eval-120-corpus-expansion-and-clearing.md  ADR-039-agent-schema-conformance-scope-and-metric.md  (+55 more)
frontend/: index.html  (+4 more)
(+307 files in other folders)
