[project]
name = "bank-reconciliation-agent"
version = "0.1.0"
description = "MVP-0 backend skeleton for a multi-agent bank reconciliation and audit system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "jieba>=0.42.0",
    "rank-bm25>=0.2.0",
    "python-multipart>=0.0.9",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "chromadb>=0.5.0",
    "pyyaml>=6.0",
    "structlog>=24.0.0",
    "openai>=1.0.0",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "arq>=0.28.0",
    "redis>=5.3.1",
    "pyjwt>=2.13.0",
    "bcrypt>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "fakeredis>=2.36.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bank_reconciliation_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
markers = [
    "live: opt-in tests that call external live services",
]

[tool.ruff]
line-length = 100
target-version = "py311"
